--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="calendar-month-header-selectors">
                 <span id="previous-month-selector"> < </span>
                 <span id="present-month-selector">Today</span>
-                <span id="next-month-selector"> > </span></span>
+                <span id="next-month-selector"> > </span>
             </div>
             </section>
         
