--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </div>
             
                 <div class="calendar-month-header-selectors">
-                    <span id="previous-month-selector"> < </span>
+                    <span id="previous-month-selector"> <- </span>
                     <span id="present-month-selector">Today</span>
-                    <span id="next-month-selector"> > </span>
+                    <span id="next-month-selector"> -> </span>
                 </div>
                 </section>
             
