feat: mostly visual stuff

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </div>
             
                 <div class="calendar-month-header-selectors">
-                    <button id="previous-month-selector" class="button">Prev</button>
-                    <span id="present-month-selector">Today</span>
-                    <button id="next-month-selector" class="button">Next</button>
+                    <button id="previous-month-selector" class="button boing-boing">Prev</button>
+                    <span id="present-month-selector" class="boing-boing" style="animation-delay: 0.10s;">Today</span>
+                    <button id="next-month-selector" class="button boing-boing" style="animation-delay: 0.20s;">Next</button>
                 </div>
                 </section>
             
