feat: starting events input

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         </div>
     </div>
 
-    <!-- Modal Box -->
+    <!-- Event Input -->
     <div class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p class="content"></p>
+            <label for="HOHO">Title of the Event: </label>
+            <input type="text" name="HAHA" id="HOHO">
+            <!-- <p class="content">asd</p> -->
         </div>
     </div>
 </body>
