--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
     </div>
 
     <!-- Event Input -->
+    <!-- Updated border colors such as for an error state -->
+    <!-- Add to .input style="--input-border: #ff3c41; --input-focus-h: 358; --input-focus-s: 100%; --input-focus-l: 26%;" -->
     <div class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <label for="HOHO">Title of the Event: </label>
-            <input type="text" name="HAHA" id="HOHO">
-            <!-- <p class="content">asd</p> -->
+            <span class="close">X</span>
+            
+            <label class="label" for="title-input">Title </label>
+            <input type="text" name="title" class="input" id="title-input" placeholder="Add your title here">
+            
+            <label for="description-input" class="label description">Description</label>
+            <textarea placeholder="Add a more detailed description..."name="description" id="description-input" class="description-textarea input"></textarea>
         </div>
     </div>
 </body>
