images, more style for event input, fixes

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
                 <label for="title" class="label-i">Title</label>
             </div>
 
-            <textarea name="description" id="description" class="textarea description-content"></textarea>
-            <label for="description" class="label block-level">Description</label>
+            <div class="description">
+
+                <textarea name="description" id="description" class="textarea"></textarea>            
+                <img src="images/title-24.png" alt="description" class="image">
+                <label for="description" class="label block-level">Description</label>
+            </div>
         </div>
     </div>
 </body>
