feat: due date added in event input

--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
             </div>
 
             <div class="description">
-
                 <textarea name="description" id="description" class="textarea"></textarea>            
-                <img src="images/title-24.png" alt="description" class="image">
-                <label for="description" class="label block-level">Description</label>
+                <img src="images/title-24.png" alt="description" class="image-description">
+                <label for="description" class="label-description block-level">Description</label>
+            </div>
+
+            <div class="due-date">
+                <img src="images/time-48.png" alt="due date" class="image-duedate">
+                <label for="duedate" class="label-duedate">Due date</label>
+                <input type="date" name="duedate" id="duedate" class="input-duedate">
             </div>
         </div>
     </div>
