--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
                 <label for="description" class="label-description block-level">Description</label>
             </div>
 
-            <div class="due-date">
+            <div class="duedate-container">
                 <img src="images/time-48.png" alt="due date" class="image-duedate">
                 <label for="duedate" class="label-duedate">Due date</label>
                 <input type="date" name="duedate" id="duedate" class="input-duedate">
             </div>
+
+            <button class="button save-btn">Save</button>
         </div>
     </div>
 </body>
