--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div class="modal-content">
             <span class="close"></span>
             
-            <div class="input-field">
-                <input type="text" id="title" class="input">
-                <label for="title" class="label-i">Title</label>
+            <div class="title-container">
+                <input type="text" id="title" class="input-title">
+                <label for="title" class="label-title">Title</label>
             </div>
 
-            <div class="description">
-                <textarea name="description" id="description" class="textarea"></textarea>            
+            <div class="description-container">
+                <textarea name="description" id="description" class="description-input"></textarea>            
                 <img src="images/title-24.png" alt="description" class="image-description">
                 <label for="description" class="label-description block-level">Description</label>
             </div>
