refactor: incosistency in css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="description-container">
-                <textarea name="description" id="description" class="description-input"></textarea>            
+                <textarea name="description" id="description" class="input-description"></textarea>            
                 <img src="images/title-24.png" alt="description" class="image-description">
                 <label for="description" class="label-description block-level">Description</label>
             </div>
@@ -62,7 +62,7 @@
             <div class="duedate-container">
                 <img src="images/time-48.png" alt="due date" class="image-duedate">
                 <label for="duedate" class="label-duedate">Due date</label>
-                <input type="date" name="duedate" id="duedate" class="input-duedate">
+                <input type="date" placeholder="yyyy-mm-dd"name="duedate" id="duedate" class="input-duedate">
             </div>
 
             <button class="button save-btn">Save</button>
