feat: events can be updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="duedate-container">
                     <img src="images/time-48.png" alt="due date" class="image-duedate">
                     <label for="duedate" class="label-duedate">Due date</label>
-                    <input type="date" placeholder="yyyy-mm-dd" name="duedate" id="duedate" class="input-duedate">
+                    <input type="date" name="duedate" id="duedate" class="input-duedate">
                 </div>
             </form>
 
