--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="description">
                     <textarea name="description" id="description" class="description__input"></textarea>
                     <img src="images/title-24.png" alt="description" class="description__icon">
-                    <label for="description" class="description__label u-block-level">Description</label>
+                    <label for="description" class="description__label">Description</label>
                 </div>
 
                 <div class="duedate">
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div id="growl">HEY</div>
+    <!-- <div id="growl">HEY</div> -->
 </body>
 
 </html>
